fixing news scrollbar to align with chat scrollbar

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1530,6 +1530,7 @@ nav ul
   flex-direction(column)
   margin: 0
   min-height: 1px
+  padding-right: 0px
 
   .list
     height: 72px
